--- a/index.html
+++ b/index.html
@@ -1,68 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>What Concert Type Are You?</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      background-color: #f5f5f5;
-      color: #333;
-    }
-    header {
-      background-color: #111;
-      color: white;
-      padding: 1.5rem;
-      text-align: center;
-    }
-    main {
-      flex: 1;
-      padding: 2rem;
-      max-width: 600px;
-      margin: 0 auto;
-      text-align: center;
-    }
-    button {
-      margin-top: 2rem;
-      padding: 1rem 2rem;
-      font-size: 1rem;
-      border: none;
-      background-color: #222;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #444;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: #e0e0e0;
-      font-size: 0.9rem;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>What Kind of Concertgoer Are You?</title>
+
+  <!-- Tailwind (play CDN) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Font Awesome icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
+
+  <!-- Your custom styles & script -->
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
-<body>
 
-  <header>
-    <h1>What Concert Type Are You?</h1>
-    <p>Find your perfect Munich Philharmonic experience</p>
-  </header>
-
-  <main>
-    <p>Take a short quiz to discover your concert personality and get tailored concert recommendations.</p>
-    <button id="start-btn">Start Quiz</button>
-  </main>
-
-  <footer>
-    &copy; 2025 Munich Philharmonic Hackathon
-  </footer>
-
+<body class="bg-white text-black font-sans">
+  <main id="quiz-container" class="min-h-screen py-16 px-4 sm:px-6 lg:px-8"></main>
 </body>
 </html>
