Basic format for quiz score calculation, different question types

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <!-- Font Awesome icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
 
-  <!-- Your custom styles & script -->
+  <!-- Custom styles -->
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
+
+  <!-- Quiz logic (classic script) -->
+  <script src="quiz-template.js" defer></script>
 </head>
 
 <body class="bg-white text-black font-sans">
