Style changes, looks more like official philharmonic website

--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>What Kind of Concertgoer Are You?</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MPhil • Concertgoer Quiz</title>
 
-  <!-- Tailwind (play CDN) -->
+  <!-- Tailwind Play CDN (JIT) -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Font Awesome icons -->
+  <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
 
-  <!-- Custom styles -->
-  <link rel="stylesheet" href="style.css" />
+  <!-- Custom style overrides -->
+  <link rel="stylesheet" href="style.css"/>
 
-  <!-- Quiz logic (classic script) -->
+  <!-- Quiz logic -->
   <script src="quiz-template.js" defer></script>
 </head>
 
-<body class="bg-white text-black font-sans">
-  <main id="quiz-container" class="min-h-screen py-16 px-4 sm:px-6 lg:px-8"></main>
+<body class="font-body text-black bg-gradient-to-br from-[#fffbe6] via-[#f6df00]/10 to-[#f9fafb] min-h-screen">
+  <main id="quiz-container" class="min-h-screen flex items-center justify-center py-16 px-4 sm:px-6 lg:px-8"></main>
 </body>
 </html>
