Added results sharing, local storage for results

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MPhil • Concertgoer Quiz</title>
+  <title>Concertgoer Quiz - SMACK</title>
 
   <!-- Tailwind Play CDN (JIT) -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -16,6 +16,7 @@
 
   <!-- Quiz logic -->
   <script src="quiz-template.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 
 <body class="font-body text-black bg-gradient-to-br from-[#fffbe6] via-[#f6df00]/10 to-[#f9fafb] min-h-screen">
