--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <link rel="stylesheet" href="style.css"/>
 
   <!-- Quiz logic -->
-  <script src="quiz-template.js" defer></script>
+  <script type="module" src="quiz-config.js"></script>
+  <script type="module" src="quiz-template.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 
