Added more from Sarah's figma styling for questions pages

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 </head>
 
 <body class="font-body text-black bg-gradient-to-br from-[#fffbe6] via-[#f6df00]/10 to-[#f9fafb] min-h-screen">
-  <main id="quiz-container" class="min-h-screen flex items-center justify-center py-16 px-4 sm:px-6 lg:px-8"></main>
+  <main id="quiz-container" class="min-h-screen w-full"></main>
 </body>
 </html>
